--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A modern iPod manager",
   "main": "index.js",
   "scripts": {
-    "start":"electron .",
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/julianhere/ipodie#readme",
   "dependencies": {
     "node-hid": "^3.1.2",
+    "sound-play": "^1.1.0",
     "usb": "^1.8.1-libusb.6"
   }
 }
